--- a/Binary Prediction with a Rainfall/rainfall_code.ipynb
+++ b/Binary Prediction with a Rainfall/rainfall_code.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "max       300.000000    59.500000     1.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,34 +341,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "day\n",
-       "6      7\n",
-       "7      7\n",
-       "8      7\n",
-       "9      7\n",
-       "22     7\n",
-       "      ..\n",
-       "344    5\n",
-       "345    5\n",
-       "363    5\n",
-       "364    5\n",
-       "365    5\n",
-       "Name: count, Length: 365, dtype: int64"
+       "cloud\n",
+       "88.0    375\n",
+       "84.0    129\n",
+       "83.0    127\n",
+       "78.0     95\n",
+       "81.0     88\n",
+       "       ... \n",
+       "11.0      2\n",
+       "34.0      2\n",
+       "7.0       1\n",
+       "27.0      1\n",
+       "2.0       1\n",
+       "Name: count, Length: 78, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train[\"day\"].value_counts()"
+    "df_train[\"cloud\"].value_counts()"
    ]
   },
   {
